Refactor series generation to improve permutation logic and enhance card materialization